feat: better pipeline execution